new changes added

--- a/components/home.html
+++ b/components/home.html
@@ -8,7 +8,7 @@
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Custom css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 
     <title>Collabro</title>
 </head>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                    <div class="about-content" style="background-image: url(./assets/img/about.png);">
+                    <div class="about-content" style="background-image: url(../assets/img/about.png);">
                         <h3>Get Notification and 
                                 Collaborate on the go</h3>
                             <p>“Rinse the shrimp and pat them dry with paper towels. Arrange them in a single layer in a 13-by-9-inch (33-by-23-centimeter) baking dish.</p>
@@ -120,7 +120,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-3">
-                    <div class="feature-card" style="background-image: url(./assets/img/feature.png);">
+                    <div class="feature-card" style="background-image: url(../assets/img/feature.png);">
                         <div class="icon-wrapper">
                             <div class="icon">
                                 <i class="fa fa-trophy"></i>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3">
-                    <div class="feature-card" style="background-image: url(./assets/img/feature.png);">
+                    <div class="feature-card" style="background-image: url(../assets/img/feature.png);">
                         <div class="icon-wrapper">
                             <div class="icon">
                                 <i class="fa fa-trophy"></i>
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3">
-                    <div class="feature-card" style="background-image: url(./assets/img/feature.png);">
+                    <div class="feature-card" style="background-image: url(../assets/img/feature.png);">
                         <div class="icon-wrapper">
                             <div class="icon">
                                 <i class="fa fa-trophy"></i>
@@ -179,7 +179,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="more-feature-card">
-                        <div class="img-wrapper" style="background-image: url(./assets/img/benefit.png);"></div>
+                        <div class="img-wrapper" style="background-image: url(../assets/img/benefit.png);"></div>
                         <div class="card-content">
                             <h3>Protect your products and services with our tripartite system</h3>
                             <p>Excerpt From: Williams, Nathan. “Kinfolk Table : Recipes for Small</p>
@@ -188,7 +188,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3">
                     <div class="more-feature-card">
-                        <div class="img-wrapper" style="background-image: url(./assets/img/benefit.png);"></div>
+                        <div class="img-wrapper" style="background-image: url(../assets/img/benefit.png);"></div>
                         <div class="card-content">
                             <h3>Protect your products and services with our tripartite system</h3>
                             <p>Excerpt From: Williams, Nathan. “Kinfolk Table : Recipes for Small</p>
@@ -197,7 +197,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3">
                     <div class="more-feature-card">
-                        <div class="img-wrapper" style="background-image: url(./assets/img/benefit.png);"></div>
+                        <div class="img-wrapper" style="background-image: url(../assets/img/benefit.png);"></div>
                         <div class="card-content">
                             <h3>Protect your products and services with our tripartite system</h3>
                             <p>Excerpt From: Williams, Nathan. “Kinfolk Table : Recipes for Small</p>
