--- a/components/compo.html
+++ b/components/compo.html
@@ -8,7 +8,7 @@
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Custom css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 
     <title>Collabro</title>
 </head>
@@ -28,7 +28,7 @@
                 <div class="row flex-center">
                     <div class="col-lg-2 col-md-2 col-sm-2">
                         <a class="logo" href="#">
-                            <img src="assets/img/logo.png" />
+                            <img src="../assets/img/logo.png" />
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3">
@@ -50,7 +50,7 @@
                             </li>
                             <li class="dropdown">
                                 <a class="dropdown-toggle">
-                                    <img src="assets/img/message.png" />                      
+                                    <img src="../assets/img/message.png" />                      
                                 </a>
                             </li>
                             <li class="dropdown">
@@ -66,7 +66,7 @@
                                 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                                     aria-expanded="false">
                                     <div class="avatar avatar-s">
-                                        <img src="assets/img/user.gif" alt="user" />
+                                        <img src="../assets/img/user.gif" alt="user" />
                                     </div>
                                     <span class="username">Username <i class="fa fa-caret-down"></i></span>
                                 </a>
@@ -147,7 +147,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
-                        <img src="assets/img/logo.png" />
+                        <img src="../assets/img/logo.png" />
                         <p>Collabro is a decentralised platform for entrepreneurs to collaborate, engage, find resources and do business. Built with AI-powered tripartite collaboration system technology to connect business owners and end-users. This platform will benefit those who are seeking resources to hire, buy, sell or offer services.</p>
                     </div>
                     <div class="col-lg-2 col-md-2 col-lg-offset-1 col-md-offset-1">
