--- a/assets/sass/3-component/_banner.scss
+++ b/assets/sass/3-component/_banner.scss
@@ -30,3 +30,11 @@
         }
     }
 }
+.skitter{
+    max-width: 100% !important;
+    float: left;
+    .label_skitter{
+        width: 100% !important;
+        height: 100% !important;
+    }
+}
