--- a/components/compo.html
+++ b/components/compo.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="main-header hidden-print" id="dsci-header">
+    <header class="main-header hidden-print" id="">
         <nav class="navbar">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
