--- a/components/index.html
+++ b/components/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- Home header -->
-    <header class="home-header" id="dsci-header">
+    <header class="home-header">
         <nav class="navbar">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -59,7 +59,7 @@
     </header>
 
     <!-- Inner header -->
-    <header class="main-header hidden-print" id="dsci-header">
+    <header class="main-header hidden-print">
         <nav class="navbar">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
