--- a/components/components.html
+++ b/components/components.html
@@ -8,14 +8,14 @@
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Custom css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 
     <title>Collabro</title>
 </head>
 
 <body>
    <!-- Inner header -->
-   <header class="main-header hidden-print" id="dsci-header">
+   <header class="main-header hidden-print" id="">
         <nav class="navbar">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
