--- a/assets/sass/3-component/_main-header.sass
+++ b/assets/sass/3-component/_main-header.sass
@@ -9,6 +9,16 @@
 	left: 0px
 	z-index: 1030
 	background: rgba(0,0,0,30%)
+	&.search-active
+		background: $default
+		height: 60px
+		.navbar
+			min-height: 60px
+		.top-nav.wd-auto
+			li
+				a:hover
+					background: $white !important
+					color: $default !important
 	.navbar
 		min-height: 72px
 	.navbar-collapse
@@ -18,7 +28,7 @@
 	.logo
 		position: absolute
 		top: 0px
-		left: 15px
+		left: 0px
 	.top-nav
 		width: 100%
 		justify-content: space-evenly
