--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -43,6 +43,7 @@
 @import "3-component/toggle.scss";
 @import "3-component/topbar.scss";
 @import "3-component/tooltip.scss";
+@import "3-component/search.scss";
 
 // 4 -Pages
 //---------------------------------------------------
