--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9133,6 +9133,15 @@ i.color-btn {
   max-height: 40px;
 }
 
+.empty-card {
+  min-height: 340px;
+  background: #5B616A;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .friend-card .card-content {
   display: flex;
   align-items: center;
@@ -11899,7 +11908,7 @@ ul.simple-list li:last-of-type {
   list-style: none;
 }
 .search-tab li {
-  width: 25%;
+  width: 20%;
   float: left;
   border-right: 1px solid #fff;
 }
