--- a/assets/sass/3-component/_search.scss
+++ b/assets/sass/3-component/_search.scss
@@ -69,3 +69,13 @@
         width: 20% !important;
     }
 }
+
+.loader{
+    width: 100%;
+    height: 100vh;
+    @extend .flex-center;
+    @include absolute-center();
+    z-index: 9999;
+    background: rgba(255,255,255,0.5);
+    color: $default;
+}
