--- a/assets/sass/1-tools/_vars.sass
+++ b/assets/sass/1-tools/_vars.sass
@@ -17,6 +17,7 @@ $primary-text:                      #77869A
 $secondary-text:                    #7E8EA4
 $default-silver:                    #959DA8
 $gold:                              #C4AC83
+$pink:                              #D4145A
 
 $dark-blue:                         #204384
 $deep-blue:                         #5B616A
