--- a/assets/sass/3-component/_main-header.sass
+++ b/assets/sass/3-component/_main-header.sass
@@ -19,6 +19,14 @@
 				a:hover
 					background: $white !important
 					color: $default !important
+		.logo
+			width: 160px !important
+			top: 50%
+			left: 15px
+			transform: translateY(-50%)
+			img
+				width: auto
+				max-width: 100%
 	.navbar
 		min-height: 72px
 	.navbar-collapse
@@ -395,6 +403,10 @@
 			li
 				margin: 0px
 
+.dropdown-menu.right
+	left: 0px
+	right: auto
+
 .sidebar-toggle
 	float: left
 	background-color: $default
@@ -417,3 +429,30 @@
 
 .apps-name
 	color: $mid-black
+
+/* Cookie */
+.cookie-header
+	width: 100%
+	height: 30px
+	line-height: 30px
+	float: left
+	text-align: center
+	color: $white
+	background: $pink
+	position: fixed
+	top: 0px
+	left: 0px
+	z-index: 9999
+	transition: all 0.3s
+	i
+		position: absolute
+		top: 50%
+		right: 15px
+		transform: translateY(-50%)
+		color: $white
+	
+.cookie-active
+	padding-top: 30px
+	transition: 0.3s
+	.home-header
+		top: 30px !important
