--- a/assets/sass/3-component/_main-header.sass
+++ b/assets/sass/3-component/_main-header.sass
@@ -24,6 +24,7 @@
 			top: 50%
 			left: 15px
 			transform: translateY(-50%)
+			z-index: 99
 			img
 				width: auto
 				max-width: 100%
@@ -456,3 +457,6 @@
 	transition: 0.3s
 	.home-header
 		top: 30px !important
+
+.iscookie
+	top: 30px !important
