--- a/assets/sass/3-component/_search.scss
+++ b/assets/sass/3-component/_search.scss
@@ -88,6 +88,10 @@
         background-repeat: no-repeat;
         background-size: cover;
         @include border-radius(4px 4px 0 0);
+        img{
+            width: 100%;
+            height: 100%;
+        }
     }
     @media (max-width: 1280px){
         .card-img{
@@ -111,7 +115,10 @@
     width: 100%;
     height: 100vh;
     @extend .flex-center;
-    @include absolute-center();
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
     z-index: 9999;
     background: rgba(255,255,255,0.5);
     color: $default;
