--- a/assets/sass/4-pages/_login.scss
+++ b/assets/sass/4-pages/_login.scss
@@ -1,3 +1,16 @@
+.modal-overlay{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: rgba(0,0,0,0.6);
+    overflow: hidden;
+    z-index: 9999;
+}
+.signin-modal{
+    position: absolute;
+    top: 60px;
+    right: 15px;
+}
 .login-modal{
     width: 100%;
     float: left;
