--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -44,6 +44,7 @@
 @import "3-component/topbar.scss";
 @import "3-component/tooltip.scss";
 @import "3-component/search.scss";
+@import "3-component/_slickslider.scss";
 
 // 4 -Pages
 //---------------------------------------------------
