--- a/assets/sass/2-basics/_layout.sass
+++ b/assets/sass/2-basics/_layout.sass
@@ -14,16 +14,15 @@
 
 .left-sidebar
     float: left    
-        
+    margin-right: 10px
 .right-sidebar
     float: right   
     background: $white 
     margin-left: 10px
 
 .content
-    width: calc(100% - 360px)
+    width: calc(100% - 420px)
     float: left
     // margin: 0 10px
-    background: $white
                         
                 
