--- a/components/dashboard.html
+++ b/components/dashboard.html
@@ -131,8 +131,76 @@
         <div class="content">
             <!-- app top -->
             <div class="container-top">
-                <div class="container-left"></div>
-                <div class="container-right"></div>
+                <div class="container-left">
+                    <img src="../assets/img/benefit.png" />
+                </div>
+                <div class="container-right">
+                    <div class="accordion-head">WHAT’S HAPPENING TODAY!</div>
+                    <div class="accordion-container">
+                        <!-- accordion -->
+                        <div class="accordion-wrapper">
+                            <div class="accordion-label">
+                                <img src="../assets/img/avatar.jpg" />
+                                <div class="label-content">
+                                    <p>For agencies and companies</p>
+                                    <p><i class="fa fa-calendar" ></i> 04.06.2019</p>
+                                </div>
+                                <div class="accordion-toggle">
+                                    <span class="check">
+                                        <i class="fa fa-check-circle default"></i>
+                                    </span>
+                                    <i class="fa fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="accordion-body">
+                                <div class="accordion-body-top">
+                                    For agencies and companies, we're hosting workshops to make sure you get the best out of this Design System.make sure you get the best out of this Design System.make sure you get the best out of this Design System.
+                                </div>
+                                <div class="accordion-body-bottom">
+                                    <div class="icons-left">
+                                        <i class="fa fa-heart default"></i>
+                                        <i class="fa fa-mail-forward"></i>
+                                    </div>
+                                    <div class="button-right">
+                                        <button type="button" class="btn default-btn"><i class="fa fa-phone-square mr-5"></i> Chat</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- accordion -->
+                        <div class="accordion-wrapper">
+                            <div class="accordion-label">
+                                <img src="../assets/img/avatar.jpg" />
+                                <div class="label-content">
+                                    <p>For agencies and companies, we're hosting workshops to make sure you get the best out of this Design System.</p>
+                                    <p><i class="fa fa-calendar" ></i> 04.06.2019</p>
+                                </div>
+                                <div class="accordion-toggle">
+                                    <span class="check">
+                                        <i class="fa fa-check-circle default"></i>
+                                    </span>
+                                    <i class="fa fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="accordion-body">
+                                <div class="accordion-body-top">
+                                    For agencies and companies, we're hosting workshops to make sure you get the best out of this Design System.make sure you get the best out of this Design System.make sure you get the best out of this Design System.
+                                </div>
+                                <div class="accordion-body-bottom">
+                                    <div class="icons-left">
+                                        <i class="fa fa-heart default"></i>
+                                        <i class="fa fa-mail-forward"></i>
+                                    </div>
+                                    <div class="button-right">
+                                        <button type="button" class="btn default-btn"><i class="fa fa-phone-square mr-5"></i> Chat</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
             </div>
             <!-- app container -->
             <div class="content-container">
