--- a/assets/sass/3-component/_accordion.sass
+++ b/assets/sass/3-component/_accordion.sass
@@ -243,3 +243,83 @@
           img
             height: 34px
             @include border-radius(50%)
+
+
+/* Accordion usermain */
+.accordion-head
+  width: 100%
+  float: left
+  background: $secondary-text
+  color: $white
+  padding: 8px
+.accordion-container
+  width: 100%
+  float: left
+  padding: 8px
+  .accordion-wrapper
+    width: 100%
+    float: left    
+    margin-bottom: 8px
+    .accordion-label
+      width: 100%
+      display: flex
+      align-items: center
+      padding: 8px
+      @extend .silver-gradient
+      border: 1px solid $white
+      img
+        width: 45px
+        height: 45px
+        @include border-radius(5px)
+      .label-content
+        width: calc(100% - 80px)
+        margin: 0 10px
+        display: flex
+        flex-direction: column
+        p
+          padding-bottom: 10px
+          margin-bottom: 10px
+          border-bottom: 1px solid $deep-blue
+          @include word(98%)
+          &:last-of-type
+            margin-bottom: 0px
+            border-bottom: 0
+      .accordion-toggle
+        width: 15px
+        float: right
+        display: inline-flex
+        justify-content: center
+        flex-direction: column
+        text-align: center
+        .check
+          margin-bottom: 15px
+        i
+          font-size: $font-m
+    .accordion-body
+      width: 100%
+      float: left  
+      background: $white
+      padding: 8px
+      .accordion-body-top
+        width: 100%
+        float: left
+        font-size: $font-r
+        background: $white
+        margin-bottom: 10px
+      .accordion-body-bottom
+        width: 100%
+        float: left
+        display: flex
+        align-items: center
+        justify-content: space-between
+        .icons-left
+          width: 100px
+          float: left
+          i
+            margin-right: 10px
+            font-size: $font-m
+        .button-right
+          width: auto
+          float: right
+          margin-left: auto
+        
